--- a/assets/pages/service.html
+++ b/assets/pages/service.html
@@ -23,17 +23,12 @@
 	<header class="header">
 		<div class="box">
 			<nav class="nav">
-	      <a class="button4" href="../../index.html">&#129044;</a>
+	      <a class="button4" href="../../index.html">Х</a>
 			  <h1 class="nav__title1">Fix-Miner</h1>
 			  <p class="nav__time">Мы работаем с 9:00, до 20:00</p>
 			</nav>
 		</div>
 	</header>
-	<div class="console">
-		<div class="shape">
-			<a class="console_text" href="#">&#129045;</a>
-		</div>
-	</div>
 	<div class="container">
 		<div class="header_service">
 			<h1 class="header_service">Услуги:</h1>
